# GP-Portfolio

./: .gitignore  README.md  astro.config.mjs  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/issue_template/: bug_report.yml  feature_request.yml
.github/workflows/: dependabot-auto-update.yml
DuckAI/: Modelfile  README.md
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
frontend/: .gitignore  .prettierignore  .prettierrc  README.md  astro.config.mjs  eslint.config.js  package.json  tsconfig.json  vercel.json
frontend/public/: robots.txt
frontend/public/favicons/: site.webmanifest
frontend/src/components/: ChatInput.svelte  ConversationView.svelte
frontend/src/data/: links.json  prompts.json
frontend/src/layouts/: Layout.astro
frontend/src/pages/: 404.astro  chat.astro  how-it-works.astro  index.astro  links.astro
ollama/: Modelfile  README.md
src/components/: Button.svelte  ChatInput.svelte
src/layouts/: HiwLayout.astro  Layout.astro
src/pages/: 404.astro  how-it-works.astro  how-it-works.md  index.astro
src/pages/api/: chat.js
