[project]
name = "portfolio-backend"
version = "0.1.0"
description = "FastAPI backend that serves as a proxy between the frontend and a local Ollama AI instance"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.32.1",
    "httpx==0.28.1",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]